--- a/ios/ExportOptions.plist
+++ b/ios/ExportOptions.plist
@@ -2,21 +2,26 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>compileBitcode</key>
+	<false/>
 	<key>destination</key>
 	<string>export</string>
-	<key>manageAppVersionAndBuildNumber</key>
-	<false/>
 	<key>method</key>
-	<string>app-store</string>
+	<string>development</string>
+	<key>provisioningProfiles</key>
+	<dict>
+		<key>com.kevych.untitled1</key>
+		<string>flutter1</string>
+	</dict>
+	<key>signingCertificate</key>
+	<string>4C54AA64C1F2F48C17E72C30213C3048A0D26369</string>
 	<key>signingStyle</key>
-	<string>automatic</string>
+	<string>manual</string>
 	<key>stripSwiftSymbols</key>
 	<true/>
 	<key>teamID</key>
 	<string>F7545ULWS4</string>
-	<key>uploadBitcode</key>
-	<false/>
-	<key>uploadSymbols</key>
-	<true/>
+	<key>thinning</key>
+	<string>&lt;none&gt;</string>
 </dict>
 </plist>
