--- a/.github/workflows/flutter_ci_cd.yml
+++ b/.github/workflows/flutter_ci_cd.yml
@@ -171,7 +171,11 @@ jobs:
         IOS_API_KEY_ID: ${{ secrets.IOS_API_KEY_ID }}
         IOS_API_KEY: ${{ secrets.IOS_API_KEY }}
         PATH_TO_IPA: ${{ env.PATH_TO_IPA }}
-      run: |        
+      run: |
+        echo "Setup private key"
+        mkdir ~/.appstoreconnect/private_keys/
+        echo "$IOS_API_KEY" >> "~/.appstoreconnect/private_keys/AuthKey_${{ env.IOS_API_KEY_ID }}.p8"
+        
         echo "Upload to TestFlight"
         xcrun altool --upload-app -t ios -f $PATH_TO_IPA --apiKey "$IOS_API_KEY_ID" --apiIssuer "$IOS_API_ISSUER_ID"
 
