--- a/ios/ExportOptions.plist
+++ b/ios/ExportOptions.plist
@@ -9,11 +9,16 @@
 	<key>method</key>
 	<string>app-store</string>
 	<key>signingStyle</key>
-	<string>automatic</string>
+	<string>manual</string>
 	<key>stripSwiftSymbols</key>
 	<true/>
 	<key>teamID</key>
-	<string>6MD2LD6PLB</string>
+	<string>F7545ULWS4</string>
+	<key>provisioningProfiles</key>
+	<dict>
+		<key>com.kevych.untitled1</key>
+		<string>flutter1</string>
+	</dict>
 	<key>uploadBitcode</key>
 	<false/>
 	<key>uploadSymbols</key>
