--- a/.github/workflows/flutter_ci_cd.yml
+++ b/.github/workflows/flutter_ci_cd.yml
@@ -154,7 +154,7 @@ jobs:
         echo "Increasing keychain auto lock timeout"
         security set-keychain-settings -lut 1800 ~/Library/Keychains/build.keychain
 
-        flutter build ipa --flavor prod --verbose
+        flutter build ipa --release
 
         echo "Locking keychain"
         security lock-keychain ~/Library/Keychains/build.keychain
