--- a/ios/ExportOptions.plist
+++ b/ios/ExportOptions.plist
@@ -2,26 +2,20 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>destination</key>
-	<string>export</string>
-	<key>manageAppVersionAndBuildNumber</key>
+	<key>compileBitcode</key>
 	<false/>
-	<key>method</key>
-	<string>app-store</string>
-	<key>signingStyle</key>
-	<string>manual</string>
-	<key>stripSwiftSymbols</key>
-	<true/>
-	<key>teamID</key>
-	<string>F7545ULWS4</string>
 	<key>provisioningProfiles</key>
 	<dict>
 		<key>com.kevych.untitled1</key>
-		<string>flutter1</string>
+		<string>flutter</string>
 	</dict>
-	<key>uploadBitcode</key>
-	<false/>
-	<key>uploadSymbols</key>
-	<true/>
+	<key>signingCertificate</key>
+	<string>Apple Development</string>
+	<key>signingStyle</key>
+	<string>manual</string>
+	<key>teamID</key>
+	<string>F7545ULWS4</string>
+	<key>thinning</key>
+	<string>&lt;none&gt;</string>
 </dict>
 </plist>
