--- a/.github/workflows/flutter_ci_cd.yml
+++ b/.github/workflows/flutter_ci_cd.yml
@@ -172,9 +172,15 @@ jobs:
         IOS_API_KEY: ${{ secrets.IOS_API_KEY }}
         PATH_TO_IPA: ${{ env.PATH_TO_IPA }}
       run: |
+        echo "Setup private key"
+        mkdir -p ~/.appstoreconnect/private_keys/
+        echo "$IOS_API_KEY" >> "~/.appstoreconnect/private_keys/AuthKey_${{ env.IOS_API_KEY_ID }}.p8"
+        
+        mkdir -p ~/private_keys
+        echo -n "$IOS_API_KEY" | --output ~/private_keys/AuthKey_$IOS_API_KEY_ID.p8
+
         
         echo "Upload to TestFlight"
-        xcrun altool --upload-app -t ios -f $PATH_TO_IPA --apiKey "${{ secrets.IOS_API_KEY }}" --apiIssuer "${{ secrets.IOS_API_ISSUER_ID }}"
-
+        xcrun altool --upload-app -t ios -f $PATH_TO_IPA --apiKey $IOS_API_KEY_ID --apiIssuer $IOS_API_ISSUER_ID
         echo "Clean up"
         rm -rf ~/.appstoreconnect/private_keys/
