--- a/.github/workflows/flutter_ci_cd.yml
+++ b/.github/workflows/flutter_ci_cd.yml
@@ -173,11 +173,11 @@ jobs:
         PATH_TO_IPA: ${{ env.PATH_TO_IPA }}
       run: |
         echo "Setup private key"
-        mkdir -p ~/.appstoreconnect/private_keys/
-        echo -n "$IOS_API_KEY" | base64 --decode --output ~/.appstoreconnect/private_keys/AuthKey_$IOS_API_KEY_ID.p8
+        mkdir -p ~/private_keys/
+        echo -n "$IOS_API_KEY" | base64 --decode --output ~/private_keys/AuthKey_$IOS_API_KEY_ID.p8
 
         
         echo "Upload to TestFlight"
         xcrun altool --upload-app -t ios -f $PATH_TO_IPA --apiKey $IOS_API_KEY_ID --apiIssuer $IOS_API_ISSUER_ID
         echo "Clean up"
-        rm -rf ~/.appstoreconnect/private_keys/
+        rm -rf ~/private_keys/
