--- a/.github/workflows/flutter_ci_cd.yml
+++ b/.github/workflows/flutter_ci_cd.yml
@@ -72,7 +72,7 @@ jobs:
     
     - name: Build AAB
       run: |
-        flutter build appbundle --release
+        flutter build appbundle --release --no-tree-shake-icons
 
         echo "Removing signing files for extra security"
         rm android/key.*
