--- a/.github/workflows/flutter_ci_cd.yml
+++ b/.github/workflows/flutter_ci_cd.yml
@@ -94,6 +94,26 @@ jobs:
     runs-on: macos-12
     timeout-minutes: 30
     steps:  
+    
+    - name: Install GitVersion
+      uses: gittools/actions/gitversion/setup@v0.9.7
+      with:
+        versionSpec: '5.x'
+        
+    - name: release
+      uses: actions/create-release@v1
+      id: create_release
+      with:
+        draft: false
+        prerelease: false
+        release_name: ${{ steps.gitversion.outputs.SemVer }}
+        tag_name: ${{ steps.gitversion.outputs.SemVer }}
+        body: ${{ github.event.head_commit.message }}
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      run: |
+        echo "gitversion  ${{ steps.gitversion.outputs.SemVer }}"
+    
     - name: Checkout repository
       uses: actions/checkout@v3
     
