--- a/.github/workflows/flutter_ci_cd.yml
+++ b/.github/workflows/flutter_ci_cd.yml
@@ -106,7 +106,7 @@ jobs:
       uses: actions/create-release@v1
       id: create_release
       with:
-          tag_name: ${{ github.ref }}
+          tag_name: ${{ github.event.release.tag_name }}
           release_name: Release ${{ github.ref }}
           body: TODO
           draft: true
