--- a/.github/workflows/flutter_ci_cd.yml
+++ b/.github/workflows/flutter_ci_cd.yml
@@ -4,7 +4,7 @@ name: Flutter CI + CD
 on:
  push:
     branches:
-      - main
+      - new
 
 env:
   FLUTTER_CHANNEL: 'stable' # 'stable', 'beta', or 'master', default to: 'stable'
