--- a/.github/workflows/flutter_ci_cd.yml
+++ b/.github/workflows/flutter_ci_cd.yml
@@ -104,14 +104,20 @@ jobs:
       with:
         versionSpec: '5.x'
         
+    - name: Use GitVersion
+      id: gitversion # step id used as reference for output values
+      uses: gittools/actions/gitversion/execute@v0.9
+        - run: |
+        echo "Major: ${{ steps.gitversion.outputs.fullSemVer }}"
+
     - name: Prepare for release
       uses: actions/create-release@v1
       id: create_release
       env:
         GITHUB_TOKEN: ${{ secrets.FS_GITHUB_TOKEN }}
       with:
-          tag_name "${{ steps.gitversion.outputs.fullSemVer }}"
-          release_name: Release "${{ steps.gitversion.outputs.fullSemVer }}"
+          tag_name ${{ steps.gitversion.outputs.fullSemVer }}
+          release_name: Release ${{ steps.gitversion.outputs.fullSemVer }}
           body: |
             Changes in this Release
             - First Change
