--- a/.github/workflows/flutter_ci_cd.yml
+++ b/.github/workflows/flutter_ci_cd.yml
@@ -107,7 +107,7 @@ jobs:
     - name: Use GitVersion
       id: gitversion # step id used as reference for output values
       uses: gittools/actions/gitversion/execute@v0.9
-        - run: |
+      run: |
         echo "Major: ${{ steps.gitversion.outputs.fullSemVer }}"
 
     - name: Prepare for release
