--- a/.github/workflows/flutter_ci_cd.yml
+++ b/.github/workflows/flutter_ci_cd.yml
@@ -104,6 +104,13 @@ jobs:
       with:
         versionSpec: '5.x'
         
+    - name: Determine Version
+      id: gitversion
+      uses: gittools/actions/gitversion/execute@v0.9.7
+      with:
+        useConfigFile: true
+        configFilePath: ./.github/gitversion.yml
+        
     - run: |
         echo "Major: ${{ steps.gitversion.outputs.SemVer }}"
 
