--- a/.github/workflows/flutter_ci_cd.yml
+++ b/.github/workflows/flutter_ci_cd.yml
@@ -110,9 +110,9 @@ jobs:
     - name: Determine Version
       id: gitversion
       uses: gittools/actions/gitversion/execute@v0.9.7
-      with:
-        useConfigFile: true
-        configFilePath: ./.github/gitversion.yml
+#      with:
+#        useConfigFile: true
+#        configFilePath: ./.github/gitversion.yml
 
     - name: Prepare for release
       uses: actions/create-release@v1
