--- a/.github/workflows/flutter_ci_cd.yml
+++ b/.github/workflows/flutter_ci_cd.yml
@@ -112,13 +112,19 @@ jobs:
 #        useConfigFile: true
 #        configFilePath: ./.github/gitversion.yml
 
+    - name: Run read-yaml action
+      id: yaml-data
+      uses: jbutcher5/read-yaml@main      # You may wish to replace main with a version tag such as '1.6' etc.
+      with:
+        file: './pubspec.yaml'          # File to read from
+        key-path: '["runs", "using"]'
     - name: Prepare for release
       uses: actions/create-release@v1
       id: create_release
       env:
         GITHUB_TOKEN: ${{ secrets.FS_GITHUB_TOKEN }}
       with:
-          tag_name: ${{ steps.gitversion.outputs.PreReleaseNumber }}
+          tag_name: "${{ steps.yaml-data.outputs.data }} + (${{ steps.gitversion.outputs.PreReleaseNumber }})"
           release_name: Release ${{ steps.gitversion.outputs.PreReleaseNumber }}
           body: |
             Changes in this Release
