--- a/.github/workflows/flutter_ci_cd.yml
+++ b/.github/workflows/flutter_ci_cd.yml
@@ -117,7 +117,7 @@ jobs:
       uses: jbutcher5/read-yaml@main      # You may wish to replace main with a version tag such as '1.6' etc.
       with:
         file: './pubspec.yaml'          # File to read from
-        key-path: '["runs", "read"]'
+        key-path: '["runs", "version"]'
     - name: Prepare for release
       uses: actions/create-release@v1
       id: create_release
