--- a/.github/workflows/flutter_ci_cd.yml
+++ b/.github/workflows/flutter_ci_cd.yml
@@ -70,11 +70,7 @@ jobs:
       run: flutter doctor # this is an optional step and can be removed
     
     - name: Build AAB
-      run: |
-        flutter build appbundle --release --no-tree-shake-icons
-
-        echo "Removing signing files for extra security"
-        rm android/key.*
+      run: flutter build appbundle --release
     
     - name: Upload AAB artifact
       uses: actions/upload-artifact@v3
