--- a/.github/workflows/flutter_ci_cd.yml
+++ b/.github/workflows/flutter_ci_cd.yml
@@ -70,7 +70,11 @@ jobs:
       run: flutter doctor # this is an optional step and can be removed
     
     - name: Build AAB
-      run: flutter build appbundle --release
+      run: |
+        flutter build appbundle --release --no-tree-shake-icons
+
+        echo "Removing signing files for extra security"
+        rm android/key.*
     
     - name: Upload AAB artifact
       uses: actions/upload-artifact@v3
@@ -108,19 +112,22 @@ jobs:
 #        useConfigFile: true
 #        configFilePath: ./.github/gitversion.yml
 
-    - name: Run read-yaml action
-      id: yaml-data
-      uses: jbutcher5/read-yaml@main      # You may wish to replace main with a version tag such as '1.6' etc.
+    - uses: actions/checkout@v2
+    - id: read-version
+      uses: NiklasLehnfeld/flutter-version-number-action@main
       with:
-        file: './pubspec.yaml'          # File to read from
-        key-path: '["runs"]'
+        file-path: ./pubspec.yaml
+    - uses: nick-invision/assert-action@v1
+      with:
+        expected: 0.0.1+1
+        actual: ${{ steps.read-version.outputs.version-number }}
     - name: Prepare for release
       uses: actions/create-release@v1
       id: create_release
       env:
         GITHUB_TOKEN: ${{ secrets.FS_GITHUB_TOKEN }}
       with:
-          tag_name: "${{ steps.yaml-data.outputs.data }} + (${{ steps.gitversion.outputs.PreReleaseNumber }})"
+          tag_name: "${{ steps.yaml-data.outputs.data }} (${{ steps.gitversion.outputs.PreReleaseNumber }})"
           release_name: Release ${{ steps.gitversion.outputs.PreReleaseNumber }}
           body: |
             Changes in this Release
