--- a/.github/workflows/flutter_ci_cd.yml
+++ b/.github/workflows/flutter_ci_cd.yml
@@ -71,7 +71,7 @@ jobs:
     
     - name: Build AAB
       run: |
-        flutter build appbundle --release --no-tree-shake-icons
+        flutter build appbundle --release
 
         echo "Removing signing files for extra security"
         rm android/key.*
