--- a/.github/workflows/flutter_ci_cd.yml
+++ b/.github/workflows/flutter_ci_cd.yml
@@ -112,6 +112,17 @@ jobs:
 #        useConfigFile: true
 #        configFilePath: ./.github/gitversion.yml
 
+    - name: "Retrieve version"
+      id: version
+      run: |
+          echo "OLD_VERSION=$(cat ${GITHUB_WORKSPACE}/pubspec.yaml | grep 'version:' | head -1 | cut -f2- -d: | sed -e 's/^[ \t]*//')" >> $GITHUB_OUTPUT
+          echo "NEW_VERSION=$(awk '{ match($0,/([0-9]+)\+([0-9]+)/,a); a[1]=a[1]+1; a[2]=a[2]+1; sub(/[0-9]+\+[0-9]+/,a[1]"+"a[2])}1' ${GITHUB_WORKSPACE}/pubspec.yaml | grep 'version:' | head -1 | cut -f2- -d: | sed -e 's/^[ \t]*//')" >> $GITHUB_OUTPUT
+    - name: "Increment version"
+      run: |
+        sed -i 's/${{ steps.version.outputs.OLD_VERSION }}/${{ steps.version.outputs.NEW_VERSION }}/g' ${GITHUB_WORKSPACE}/pubspec.yaml
+        echo ${{ steps.version.outputs.OLD_VERSION }}
+        echo ${{ steps.version.outputs.NEW_VERSION }}
+
     - uses: actions/checkout@v2
     - id: read-version
       uses: NiklasLehnfeld/flutter-version-number-action@main
