--- a/.github/workflows/flutter_ci_cd.yml
+++ b/.github/workflows/flutter_ci_cd.yml
@@ -113,16 +113,8 @@ jobs:
 #        configFilePath: ./.github/gitversion.yml
 
 
-    - name: Auto Increment Semver Action
-      uses: MCKanpolat/auto-semver-action@1.0.5
-      id: versioning
-      with:
-        releaseType: patch 
-        incrementPerCommit: false
-        github_token: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Next Release Number
-      run: echo ${{ steps.versioning.outputs.version }}
+
 
 
     - uses: actions/checkout@v2
@@ -137,7 +129,7 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.FS_GITHUB_TOKEN }}
       with:
-          tag_name: ${{ steps.read-version.outputs.version-number }}(${{ steps.gitversion.outputs.BuildMetaData }})
+          tag_name: ${{ steps.read-version.outputs.version-number }}
           release_name: Release ${{ steps.gitversion.outputs.PreReleaseNumber }}
           body: |
             Changes in this Release
