--- a/.github/workflows/flutter_ci_cd.yml
+++ b/.github/workflows/flutter_ci_cd.yml
@@ -130,13 +130,12 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.FS_GITHUB_TOKEN }}
       if: steps.read-version.outputs.version-number == steps.gitversion.outputs.MajorMinorPatch
       with:
-          tag_name: ${{
+          tag_name:
              if [[steps.read-version.outputs.version-number == steps.gitversion.outputs.MajorMinorPatch]]; then 
                 ${{ steps.read-version.outputs.version-number }}(${{0}})
              else
                 ${{ steps.read-version.outputs.version-number }}(${{0}})
              fi
-           }}     
           release_name: Release ${{ steps.gitversion.outputs.BuildMetaData }}
           body: |
             Changes in this Release
