--- a/.github/workflows/flutter_ci_cd.yml
+++ b/.github/workflows/flutter_ci_cd.yml
@@ -131,7 +131,7 @@ jobs:
 #       if: steps.read-version.outputs.version-number == steps.gitversion.outputs.MajorMinorPatch
       with:
           tag_name:
-             ${{if [[steps.read-version.outputs.version-number == steps.gitversion.outputs.MajorMinorPatch]]; then 
+             ${{if ${{steps.read-version.outputs.version-number == steps.gitversion.outputs.MajorMinorPatch}}; then 
                 ${{ steps.read-version.outputs.version-number }}(${{0}})
              else
                 ${{ steps.read-version.outputs.version-number }}(${{0}})
