--- a/.github/workflows/flutter_ci_cd.yml
+++ b/.github/workflows/flutter_ci_cd.yml
@@ -117,7 +117,7 @@ jobs:
     - name: GitHub Tag Name example
       run: |
         echo "Tag name from GITHUB_REF_NAME: $GITHUB_REF_NAME"
-        echo "Tag name from github.ref_name: ${{  refs/heads/new }}"
+        echo "Tag name from github.ref_name: ${{  github.head_ref }}"
     
     
     
